# DiFlow-AE

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  artifact_evaluation.md  docker_run.sh  download_models.sh  module_load.sh  pyproject.toml  requirements.txt  setup.py
ae-scripts/: benchmark_client.py  eval_admission_control.sh  flux_schnell_canny_cfg_slo.py  flux_schnell_cfg_slo.py  gen_hostfile.sh  measure_flux_schnell_workflow_timeouts.py  parse_op_latency.py  plot_end2end.py  print_admission_control_results.py  print_normalized_latency.py  register_workflows.sh  run_baseline.sh  run_baselines.sh  run_diflow.sh  run_flux_schnell.sh  run_flux_schnell_one_gpu.sh  run_flux_schnell_two_gpu.sh  run_flux_schnell_warmup.py  workflow_timeouts.py
baselines/: baseline_utils.py  coordinator.py  server.py  worker.py
benchmark/: benchmark_clip_g.py  benchmark_clip_l.py  benchmark_clip_sd15.py  benchmark_euler_discrete_scheduler.py  benchmark_flow_match_euler_discrete_scheduler.py  benchmark_flux_clip.py  benchmark_flux_controlnet.py  benchmark_flux_flow_match_euler_discrete_scheduler.py  benchmark_flux_latents_generator.py  benchmark_flux_schnell_transformer.py  benchmark_flux_t5.py  benchmark_flux_text_encoder.py  benchmark_flux_transformer.py  benchmark_flux_vae.py  benchmark_latents_generator.py  benchmark_pndm_scheduler.py  benchmark_sdxl_clip_1.py  benchmark_sdxl_clip_2.py  benchmark_sdxl_euler_discrete_scheduler.py  benchmark_sdxl_vae.py  benchmark_stable_diffusion_15.py  benchmark_stable_diffusion_15_controlnet.py  (+16 more)
(+251 files in other folders)
